refactor: clean up servie and piplen  #712